# diagnoseme

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/: pr_template.md
Dockerfiles/app/: Dockerfile
Dockerfiles/postgres/: Dockerfile
app/: main.py
app/apis/: appointment.py  auth.py  user.py
app/core/: __init__.py  config.py  redis.py  security.py
app/db/: database.py
app/models/: __init__.py  appointment.py  auth.py  common.py  hospital.py  slot.py  user.py  users.py
app/schemas/: appointment.py  auth.py  slot.py  user.py
app/services/: auth.py  redis_cache.py  user.py
migrations/models/: 0_20260402001806_init.py  1_20260328171507_None.py
scripts/: 1_add_gist_and_indexes.py  code_format.sh  entrypoint.sh  test.sh
scripts/init-db/: init-extensions.sql
scripts/pgadmin/: .pgpass  servers.json
scripts/redis/: entrypoint.sh
utils/redis/: redis.conf
